Fix GHA build and git properties